...
            Task {
                await login()
            }
        } else {
            
            let action = AlertActionModel(
                title: "Ok",
                style: .default,
                handler: nil
            )
            coordinator?.alert(
                with: "Error",
                alertMessage: "Enter valid email and password",
                alertActions: [action]
            )
        }
        
    }
...
