...
                    <color key="backgroundColor" name="primary"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="56" id="h3Y-c4-U7g"/>
                    </constraints>
                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="plain" title="Signup">
                        <fontDescription key="titleFontDescription" name="NeueHaasDisplay-Mediu" family="Neue Haas Grotesk Display Pro" pointSize="18"/>
                    </buttonConfiguration>
                    <connections>
                        <action selector="signupButtonPressed:" destination="-1" eventType="touchUpInside" id="lfe-uN-2xT"/>
                    </connections>
                </button>
...
