...
                    <color key="backgroundColor" name="primary"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="56" id="GYj-hK-fia"/>
                    </constraints>
                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="plain" title="Login">
                        <fontDescription key="titleFontDescription" name="NeueHaasDisplay-Mediu" family="Neue Haas Grotesk Display Pro" pointSize="18"/>
                    </buttonConfiguration>
                    <connections>
                        <action selector="loginButtonPressed:" destination="-1" eventType="touchUpInside" id="o25-5L-ZO3"/>
                    </connections>
                </button>
...
